--- a/xLights/Xlights.vcxproj.filters
+++ b/xLights/Xlights.vcxproj.filters
@@ -1102,7 +1102,12 @@
     <ClCompile Include="preferences\ServicesPanel.cpp">
       <Filter>Preferences</Filter>
     </ClCompile>
-    <ClCompile Include="chatGPT.cpp" />
+    <ClCompile Include="ai\aiBase.cpp">
+      <Filter>ai</Filter>
+    </ClCompile>
+    <ClCompile Include="ai\chatGPT.cpp">
+      <Filter>ai</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BatchRenderDialog.h" />
@@ -2214,7 +2219,12 @@
     <ClInclude Include="preferences\ServicesPanel.h">
       <Filter>Preferences</Filter>
     </ClInclude>
-    <ClInclude Include="chatGPT.h" />
+    <ClInclude Include="ai\aiBase.h">
+      <Filter>ai</Filter>
+    </ClInclude>
+    <ClInclude Include="ai\chatGPT.h">
+      <Filter>ai</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Models">
@@ -2268,6 +2278,9 @@
     <Filter Include="Prompts">
       <UniqueIdentifier>{22d4d199-c5a9-4be6-8413-da0802e96e06}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ai">
+      <UniqueIdentifier>{b7af1744-89fc-4b00-b7a5-fac169948940}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
@@ -2276,16 +2289,16 @@
     <Text Include="..\documentation\xlDo Commands.txt">
       <Filter>automation</Filter>
     </Text>
-    <Text Include="..\prompts\ChatGPT_AI_Model_AutoMap.txt">
+    <Text Include="..\prompts\AI_Model_AutoMap.txt">
       <Filter>Prompts</Filter>
     </Text>
-    <Text Include="..\prompts\ChatGPT_AI_Node_AutoMap.txt">
+    <Text Include="..\prompts\AI_Node_AutoMap.txt">
       <Filter>Prompts</Filter>
     </Text>
-    <Text Include="..\prompts\ChatGPT_AI_Strand_AutoMap.txt">
+    <Text Include="..\prompts\AI_Strand_AutoMap.txt">
       <Filter>Prompts</Filter>
     </Text>
-    <Text Include="..\prompts\ChatGPT_AI_SubModel_AutoMap.txt">
+    <Text Include="..\prompts\AI_SubModel_AutoMap.txt">
       <Filter>Prompts</Filter>
     </Text>
   </ItemGroup>
