added files to codeblocks

--- a/xLights/xLights.cbp
+++ b/xLights/xLights.cbp
@@ -508,10 +508,15 @@
 		<Unit filename="cad/STLWriter.h" />
 		<Unit filename="cad/VRMLWriter.cpp" />
 		<Unit filename="cad/VRMLWriter.h" />
-		<Unit filename="ai/aiBase.h" />		
-		<Unit filename="ai/aiBase.cpp" />		
-		<Unit filename="ai/chatGPT.h" />		
-		<Unit filename="ai/chatGPT.cpp" />		
+		<Unit filename="ai/aiBase.h" />
+		<Unit filename="ai/aiBase.cpp" />
+		<Unit filename="ai/aiType.h" />
+		<Unit filename="ai/chatGPT.h" />
+		<Unit filename="ai/chatGPT.cpp" />
+		<Unit filename="ai/ollama.h" />	
+		<Unit filename="ai/ollama.cpp" />
+		<Unit filename="ai/ServiceManager.h" />
+		<Unit filename="ai/ServiceManager.cpp" />
 		<Unit filename="controllers/AlphaPix.cpp" />
 		<Unit filename="controllers/AlphaPix.h" />
 		<Unit filename="controllers/BaseController.cpp" />
