--- a/xLights/Xlights.vcxproj.filters
+++ b/xLights/Xlights.vcxproj.filters
@@ -1101,6 +1101,9 @@
     <ClCompile Include="preferences\ServicesPanel.cpp">
       <Filter>Preferences</Filter>
     </ClCompile>
+    <ClCompile Include="ai\AIColorPaletteDialog.cpp">
+      <Filter>ai</Filter>
+    </ClCompile>
     <ClCompile Include="ai\aiBase.cpp">
       <Filter>ai</Filter>
     </ClCompile>
@@ -2223,7 +2226,10 @@
     <ClInclude Include="preferences\ServicesPanel.h">
       <Filter>Preferences</Filter>
     </ClInclude>
-    <ClInclude Include="effects\ispc\VideoFunctions.ispc.h" />
+    <ClInclude Include="effects\ispc\VideoFunctions.ispc.h" />    
+    <ClInclude Include="ai\AIColorPaletteDialog.h">
+      <Filter>ai</Filter>
+    </ClInclude>
     <ClInclude Include="ai\aiBase.h">
       <Filter>ai</Filter>
     </ClInclude>
