--- a/xSchedule/RemoteFalcon/RemoteFalcon.cbp
+++ b/xSchedule/RemoteFalcon/RemoteFalcon.cbp
@@ -34,6 +34,7 @@
 					<Add directory="../xSchedule/RemoteFalcon" />
 					<Add directory="../include" />
 					<Add directory="../../xLights" />
+					<Add directory="../../include" />
 				</Compiler>
 				<Linker>
 					<Add option="-lGL -lGLU -lglut -ldl -lX11 -lz -lzstd" />
@@ -74,6 +75,7 @@
 					<Add directory="../xSchedule/RemoteFalcon" />
 					<Add directory="../include" />
 					<Add directory="../../xLights" />
+					<Add directory="../../include" />
 				</Compiler>
 				<Linker>
 					<Add option="-lGL -lGLU -lglut -ldl -lX11 -lz -lzstd" />
