--- a/xLights/Xlights.vcxproj.filters
+++ b/xLights/Xlights.vcxproj.filters
@@ -1098,9 +1098,6 @@
     <ClCompile Include="preferences\ServicesPanel.cpp">
       <Filter>Preferences</Filter>
     </ClCompile>
-    <ClCompile Include="ai\AIColorPaletteDialog.cpp">
-      <Filter>ai</Filter>
-    </ClCompile>
     <ClCompile Include="ai\aiBase.cpp">
       <Filter>ai</Filter>
     </ClCompile>
@@ -1114,10 +1111,12 @@
     <ClCompile Include="ai\ServiceManager.cpp">
       <Filter>ai</Filter>
     </ClCompile>
-    <ClCompile Include="ai\AIColorPaletteDialog.h" />
     <ClCompile Include="..\xSchedule\wxJSON\jsonreader.cpp" />
     <ClCompile Include="..\xSchedule\wxJSON\jsonval.cpp" />
     <ClCompile Include="..\xSchedule\wxJSON\jsonwriter.cpp" />
+    <ClCompile Include="ai\AIColorPaletteDialog.cpp">
+      <Filter>ai</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BatchRenderDialog.h" />
@@ -2244,10 +2243,9 @@
     <ClInclude Include="ai\aiType.h">
       <Filter>ai</Filter>
     </ClInclude>
-    <ClInclude Include="..\xSchedule\wxJSON\json_defs.h" />
-    <ClInclude Include="..\xSchedule\wxJSON\jsonreader.h" />
-    <ClInclude Include="..\xSchedule\wxJSON\jsonval.h" />
-    <ClInclude Include="..\xSchedule\wxJSON\jsonwriter.h" />
+    <ClInclude Include="ai\AIColorPaletteDialog.h">
+      <Filter>ai</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Models">
